# sys-monitor

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/: App.svelte
