[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"                                 # Framework Web
tokio = { version = "1.0", features = ["full"] } # Runtime Async
serde = { version = "1.0", features = ["derive"] } # Untuk konversi ke JSON
sysinfo = "0.30"                             # Mengambil data sistem Linux
tower-http = { version = "0.5", features = ["cors"] }